updateando cambios pequeños

--- a/dia3.html
+++ b/dia3.html
@@ -3,6 +3,7 @@
 		<title>ensalada de frutas</title>
 		<!--mi comentario-->
 		<link href="main.css" rel="stylesheet" type="text/css">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	</head>
 	<body>
 		<div align="center">
