--- a/perros/clase8.html
+++ b/perros/clase8.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Mis perros</title>
-		<link rel="stylesheet" type="text/css" href="clase7.css"/>
+		<link rel="stylesheet" type="text/css" href="clase8.css"/>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	</head>
 
@@ -11,13 +11,15 @@
 
 		<div id="menu">
 		<ul>
-		<li>Razas</li>
-		<li>Perros famosos</li>
-		<li>Merchandising</li>
+		<li><a href="razas.html" target="_blank">Razas</a></li>
+		<li><a href="famosos.html" target="_blank">Perros famosos</a></li>
+		<li><a href="merchandising.html" target="_blank">Merchandising</a></li>
 		</ul>
 		</div>
 
-		<div class="modulo1" align="center">
+		<div id="contenedor">
+		
+		
 		<div class="perro">
 			<h2>Pekinés</h2>
 			<img src="imgs/pekines.jpg"/>
@@ -35,14 +37,14 @@
 			<img src="imgs/sanbernardo.jpg"/>
 			<p>Siempre tiene un barrilito de whisky.</p>
 		</div>
-		</div>
 
-		<div class="modulo1" align="center">
+		
 		<div class="perro">
 			<h2>Pekinés</h2>
 			<img src="imgs/pekines.jpg"/>
 			<p>Oriundo de Pekín, China, era el perro de Buda.</p>
 		</div>
+
 
 		<div class="perro perro-par">
 			<h2>Cocker</h2>
@@ -55,6 +57,7 @@
 			<img src="imgs/sanbernardo.jpg"/>
 			<p>Siempre tiene un barrilito de whisky.</p>
 		</div>
+		
 		</div>
 
 		<footer>
