layout basico home de poesia

--- a/poesia/index.html
+++ b/poesia/index.html
@@ -3,14 +3,15 @@
 
 <head>
 	<title>Poesía en traducción</title>
-	<meta charset="utf-8"/>
+	<meta charset="UTF-8"/>
 	<link rel="icon" type="image/png" href="imgs/favicon.png"/>
 	<link rel="stylesheet" type="text/css" href="main.css"/>
 </head>
 
 <body>	
 
-	<div class="navbar">
+	<header>
+	<nav>
 		<ul>
 			<li><a href="index.html">home</a></li>
 			<li><a href="about.html">quiénes somos</a></li>
@@ -18,29 +19,38 @@
 			<li><a href="servicios.html">servicios de traducción</a></li>
 			<li><a href="contacto.html">contacto</a></li>
 		</ul>
-	</div>
+	</nav>
 
 	<div class="portada">
 		<h1>Poesía en traducción</h1>
 	</div>
+	</header>
 
-	<div class="newest">
+
+	<section class="newest">
 
 		<div class="newtitle">  <!--solo el titulo del div-->
 			<h2>Últimos poemas</h2>
 		</div>
 
-		<div class="newpoem">
-			<div id="oliverviaje">
-			<div class="newpoemtext">
-			<a href="poemas/oliver_elviaje.html" target="_blank">El viaje<br/>(Mary Oliver)</a>
-			</div>
+		<div class="poems">
+			<div class="newpoem">
+				<div id="oliverviaje">
+				<div class="newpoemtext">
+				<a href="poemas/oliver_elviaje.html" target="_blank">El viaje<br/>(Mary Oliver)</a>
+				</div>
+				</div>
 			</div>
 		</div>
 
 		<!--INSTALAR PACKAGE CONTROL, LUEGO EMMET-->
 
-	</div>
+	</section>
+
+
+	<footer>
+		<p>Rita Gonzalez Hesaynes - 2017</p>
+	</footer>
 
 </body>
 
