agrego contact page y mejoro css

--- a/poesia/index.html
+++ b/poesia/index.html
@@ -30,17 +30,48 @@
 	<section class="newest">
 
 		<div class="newtitle">  <!--solo el titulo del div-->
-			<h2>Últimos poemas</h2>
+			<h2>Últimos poemas traducidos</h2>
 		</div>
 
 		<div class="poems">
+
 			<div class="newpoem">
 				<div id="oliverviaje">
-				<div class="newpoemtext">
-				<a href="poemas/oliver_elviaje.html" target="_blank">El viaje<br/>(Mary Oliver)</a>
-				</div>
+				<a href="poemas/oliver_elviaje.html" target="_blank"><p>El viaje</p><p>(Mary Oliver)</p></a>
 				</div>
 			</div>
+
+			<div class="newpoem">
+				<div id="apollinairesalmon">
+				<a href="poemas/apollinaire_salmon.html" target="_blank"><p>Poema leído en la boda de André Salmon</p><p>(Guillaume Apollinaire)</p></a>
+				</div>
+			</div>
+
+			<div class="newpoem">
+				<div id="frostabedules">
+				<a href="poemas/frost_abedules.html" target="_blank"><p>Abedules</p><p>(Robert Frost)</p></a>
+				</div>
+			</div>
+
+			<div class="newpoem">
+				<div id="hugheshadas">
+				<a href="poemas/hughes_cuentodehadas.html" target="_blank"><p>Cuento de hadas</p><p>(Ted Hughes)</p></a>
+				</div>
+			</div>
+
+			<div class="newpoem">
+				<div id="frostnoviembre">
+				<a href="poemas/frost_noviembre.html" target="_blank"><p>Mi huésped de noviembre</p><p>(Robert Frost)</p></a>
+				</div>
+			</div>
+
+			<div class="newpoem">
+				<div id="aragonelsa">
+				<a href="poemas/aragon_elsa.html" target="_blank"><p>Lo que dice Elsa</p><p>(Louis Aragon)</p></a>
+				</div>
+			</div>
+
+			
 		</div>
 
 		<!--INSTALAR PACKAGE CONTROL, LUEGO EMMET-->
