tabla de precios

--- a/poesia/contacto.html
+++ b/poesia/contacto.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
 <head>
 	<title>Poesía en traducción</title>
@@ -36,8 +35,8 @@
 
 		<div class="formu">
 			<form action="" method="post" autocomplete="on">
-				<p>Nombre: <input type="text" name="nombre"></p>
-				<p>E-mail: <input type="email" name="email"></p>
+				<p>Nombre: <input type="text" name="nombre" /></p>
+				<p>E-mail: <input type="email" name="email" /></p>
 				<p>País: <select name="pais">
 <option value="">País...</option>
 <option value="Afganistan">Afghanistan</option>
@@ -289,12 +288,12 @@
 <option value="Zimbabwe">Zimbabwe</option>
 </select></p>
 
-				<p><textarea name="mensaje" rows="10" cols="90">Escribe aquí tu mensaje.</textarea></p>
+				<p><textarea name="mensaje" rows="10" cols="80">Escribe aquí tu mensaje.</textarea></p>
 
 
 
-				<input type="submit" value="Enviar" class="formbutton">
-				<input type="reset" value="Borrar" class="formbutton">
+				<input type="submit" value="Enviar" class="formbutton" />
+				<input type="reset" value="Borrar" class="formbutton" />
 
 
 			</form>
