cambios chicos enclase

--- a/poesia/contacto.html
+++ b/poesia/contacto.html
@@ -10,7 +10,6 @@
 
 <body>	
 
-	<header>
 	<nav>
 		<ul>
 			<li><a href="index.html">home</a></li>
@@ -21,17 +20,16 @@
 		</ul>
 	</nav>
 
-	<div class="portada">
+	<header class="portada">
 		<h1>Poesía en traducción</h1>
-	</div>
 	</header>
 
 
 	<section id="formulario">
 
-		<div class="newtitle">  <!--solo el titulo del div-->
+		<header class="newtitle">  <!--solo el titulo del div-->
 			<h2>Contactate</h2>
-		</div>
+		</header>
 
 		<div class="formu">
 			<form action="" method="post" autocomplete="on">
