--- a/poesia/index.html
+++ b/poesia/index.html
@@ -9,8 +9,7 @@
 </head>
 
 <body>	
-
-	<header>
+	
 	<nav>
 		<ul>
 			<li><a href="index.html">home</a></li>
@@ -21,19 +20,18 @@
 		</ul>
 	</nav>
 
-	<div class="portada">
+	<header class="portada">
 		<h1>Poesía en traducción</h1>
-	</div>
 	</header>
 
 
 	<section class="newest">
 
-		<div class="newtitle">  <!--solo el titulo del div-->
+		<header class="newtitle">  <!--solo el titulo del div-->
 			<h2>Últimos poemas traducidos</h2>
-		</div>
+		</header>
 
-		<div class="poems">
+		<section class="poems">
 
 			<div class="newpoem">
 				<div id="oliverviaje">
@@ -72,7 +70,7 @@
 			</div>
 
 			
-		</div>
+		</section>
 
 		<!--INSTALAR PACKAGE CONTROL, LUEGO EMMET-->
 
