--- a/perros/verticalalign.html
+++ b/perros/verticalalign.html
@@ -6,7 +6,17 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	</head>
 
+	
+
 <body>
+
+<nav>
+			<p><a href="index.html">home</a></p>
+			<p><a href="about.html">quiénes somos</a></p>
+			<p><a href="autores.html">autores</a></p>
+			<p><a href="servicios.html">servicios de traducción</a></p>
+			<p><a href="contacto.html">contacto</a></p>
+	</nav>
 	
 <div class="container">
 	<img class="image" src="imgs/cocker.jpg" />
