hice responsive para celular portrait y landscape

--- a/poesia/contacto.html
+++ b/poesia/contacto.html
@@ -286,12 +286,13 @@
 <option value="Zimbabwe">Zimbabwe</option>
 </select></p>
 
-				<p><textarea name="mensaje" rows="10" cols="80">Escribe aquí tu mensaje.</textarea></p>
+				<p><textarea name="mensaje" rows="10" cols="66">Escribe aquí tu mensaje.</textarea></p>
 
 
-
+				<div class="align-right">
 				<input type="submit" value="Enviar" class="formbutton" />
 				<input type="reset" value="Borrar" class="formbutton" />
+				</div>
 
 
 			</form>
