--- a/poesia/servicios.html
+++ b/poesia/servicios.html
@@ -75,9 +75,9 @@
 				
 			<form id="sendtxt" action="#" method="post">
 				<p>Envía tu archivo de texto para presupuestar:<br/>
-				<input type="file" name="texto" accept=".doc,.docx,.rtf,.txt,.pdf,.odt">*</p>
+				<input type="file" name="archivoenviado" accept=".doc,.docx,.rtf,.txt,.pdf,.odt">*</p>
 				<p>E-mail: <input type="email" name="email" value="e-mail"><p>
-				<p>Formatos aceptados: .doc .docx .rtf .txt .pdf .odt</p>
+				<p>*Formatos aceptados: .doc .docx .rtf .txt .pdf .odt</p>
 				<input type="submit" value="Enviar" class="formbutton" />
 			</form>
 		
