aullido en bootstrap

--- a/flex cafe/flexbox.html
+++ b/flex cafe/flexbox.html
@@ -16,11 +16,13 @@
 		<img src="img/coffeecup-mini.png" alt="logo"/>
 		<h2>Flex Café</h2>
 	</div> <!--logo cafe-->
+
 	<nav class="menu">
 		<a href="flexbox.html">Inicio</a>
 		<a href="#">¿Quiénes somos?</a>
 		<a href="#">Contacto</a>
 	</nav>
+	
 </header>
 
 <section class="main">
@@ -45,7 +47,7 @@
 
 <footer>
 	<div class="autor">
-		2017 - Rita Gonzalez Hesaynes
+		Rita Gonzalez Hesaynes --2017--
 	</div>
 	<nav class="redes-sociales">
 		<a href="#"><img src="img/icon-fb.png" alt="Facebook" /></a>
