--- a/hamburger/menuhamburguesa1.html
+++ b/hamburger/menuhamburguesa1.html
@@ -10,7 +10,7 @@
 
 <div class="menu-mobile">
 <input type="checkbox" id="check-item" />
-<label class="menu-icon" for="check-item"><!--<img class="hamburger" src="menu-icon.png" />--></label>
+<label class="menu-icon" for="check-item"></label>
 <ul class="dropdown">
 <li><a href="#">home</a></li>
 <li><a href="#about">about us</a></li>
@@ -19,7 +19,19 @@
 </ul>
 </div>
 
-<nav></nav>
+
+<hr>
+
+<div class="minimenu">
+<input type="checkbox" id="hidden-checkbox" />
+<label class="menu-icon" for="hidden-checkbox"></label>
+</div>
+<ul class="dropdown-menu">
+<li><a href="#">home</a></li>
+<li><a href="#about">about us</a></li>
+<li><a href="#portfolio">portfolio</a></li>
+<li><a href="#contact">contact</a></li>
+</ul>
 
 </body>
 </html>
