--- a/flex cafe/flexbox2.html
+++ b/flex cafe/flexbox2.html
@@ -8,27 +8,41 @@
 </head>
 <body>
 
-<div class="contenedor"> <!--background img-->
+<!--MOBILE NAVIGATION-->
 
+<ul class="navigation">
+    <li class="nav-item"><a href="#">Inicio</a></li>
+    <li class="nav-item"><a href="quienessomos.html">¿Quiénes somos?</a></li>
+    <li class="nav-item"><a href="reservas.html">Reservas</a></li>
+</ul>
+
+<input type="checkbox" id="nav-trigger" class="nav-trigger" />
+<label for="nav-trigger"></label>
+
+<!--MAIN SITE-->
+
+<div class="contenedor"> 
 
 <header>
 	<div class="logo">
 		<img src="img/coffeecup-mini.png" alt="logo"/>
 		<h2>Flex Café</h2>
 	</div> <!--logo cafe-->
+
 	<nav class="menu">
-		<a href="#">Inicio</a>
+		<a href="flexbox.html">Inicio</a>
 		<a href="#">¿Quiénes somos?</a>
-		<a href="#">Contacto</a>
+		<a href="#">Reservas</a>
 	</nav>
+	
 </header>
 
 <section class="main">
 	<article>
-		<figure>
-			<img src="img/coffeecup.png" alt="logo"/>
-		</figure>
+		<div class="thumb">
+			<img src="img/thumb.jpg" alt="logo"/>
 		<h2>Flex Café</h2>
+		</div>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
 		<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	</article>
@@ -36,16 +50,16 @@
 
 <aside>
 	<div class="ad"> <!--2parrafos sobre la empresa-->
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+		Info 
 	</div>
 	<div class="ad">
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+		Info
 	</div>
 </aside>
 
 <footer>
 	<div class="autor">
-		2017 - Rita Gonzalez Hesaynes
+		Rita Gonzalez Hesaynes --2017--
 	</div>
 	<nav class="redes-sociales">
 		<a href="#"><img src="img/icon-fb.png" alt="Facebook" /></a>
