actualizacion de todo

--- a/FLI/fli.html
+++ b/FLI/fli.html
@@ -160,7 +160,7 @@
 
             <!-- inicio comentario -->
             <div class="col-md-4 col-xs-12 pipo">
-              <article class="panel panel-default comentario">
+              <!-- <article class="panel panel-default comentario">
                 <div class="panel-body">
                   <header class="text-left">
                     <div class="comment-user boldtext user"><img class="img-responsive avatar" src="images/romi.png" /> Romi</div>
@@ -174,6 +174,19 @@
                     <div class="text-right">
                         <a href="#" class="btn btn-default btn-sm">responder</a>
                     </div>
+                </div>
+              </article> -->
+
+              <article class="panel panel-default panel-profile m-b-0">
+                <div class="panel-heading" style="background-image: url(images/insta-2.jpg);">
+                </div>
+                <div class="panel-body text-center">
+                  <img class="panel-profile-img" src="images/flisol-logo.png" />
+                  <h5 class="panel-title">Pablo</h5>
+                  <p class="m-b">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita omnis enim molestiae impedit quo.</p>
+                  <a class="btn btn-primary-outline btn-sm m-b" href="#" target="_blank">Reply</a>
+                </div>
+              </article>
                 </div>
               </article>
             </div>
