--- a/Landing pages/Sobre Ruedas - Repuestos/landingpage.html
+++ b/Landing pages/Sobre Ruedas - Repuestos/landingpage.html
@@ -35,13 +35,13 @@
       <div class="col-md-4 col-sm-6 hidden-xs divbutton">
         <ul class="nav">
           <li class="nav-item">
-            <a class="nav-link menubtn" data-link="contacto" href="#">Contacto</a>
+            <a class="nav-link menubtn" href="#contacto">Contacto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link menubtn" data-link="servicios" href="#">Servicios</a>
+            <a class="nav-link menubtn" href="#servicios">Servicios</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link menubtn" data-link="repuestos" href="#">Repuestos</a>
+            <a class="nav-link menubtn" href="#repuestos">Repuestos</a>
           </li>
         </ul>
       </div>
