--- a/Ejercicios JS - jQuery/superbasic handmade slider/slider1.html
+++ b/Ejercicios JS - jQuery/superbasic handmade slider/slider1.html
@@ -25,7 +25,7 @@
 <main id="#contenedor">
   <h1 class="headline">slider casero</h1>
   <div id="slider">
-    <a href="#" class="slide" data-img="1"><img id="slider-img" src="images/slider1.jpg"></a>
+    <a href="#" class="slide" id="sliderlink" data-img="1"><img id="slider-img" src="images/slider1.jpg"></a>
   </div>
 </main>
 
