--- a/Ejercicios JS - jQuery/superbasic handmade modal/modalcasero.html
+++ b/Ejercicios JS - jQuery/superbasic handmade modal/modalcasero.html
@@ -9,7 +9,7 @@
     <title>Modal casero</title>
 
     <!-- Stylesheets -->
-    <link href="modalcasero2.css" rel="stylesheet">
+    <link href="modalcasero.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -41,6 +41,6 @@
   
     <script src="js/jquery.min.js"></script>
       
-    <script src="modalcasero2.js"></script>
+    <script src="modalcasero.js"></script>
   </body>
 </html>
