--- a/Ejercicios JS - jQuery/superbasic handmade slider/slider1.html
+++ b/Ejercicios JS - jQuery/superbasic handmade slider/slider1.html
@@ -29,11 +29,7 @@
   </div>
 </main>
 
-
-
-
-
-  
+<!-- SCRIPTS -->  
     <script src="js/jquery.min.js"></script>
       
     <script src="slider1.js"></script>
