más validación formulario

--- a/Landing pages/Sobre Ruedas - Repuestos/landingpage.html
+++ b/Landing pages/Sobre Ruedas - Repuestos/landingpage.html
@@ -139,7 +139,8 @@
 
       </article>
 
-      <form class="col-md-6 col-sm-6 col-xs-12 formulario" id="formulario"> <!-- validar con jquery y hacer un select y un daypicker, poder poner un google maps, una imagen, etc -->
+      <form class="col-md-6 col-sm-6 col-xs-12 formulario" id="formulario">
+
         <h4>Contáctenos</h4>
 
           <div class="form-group">
@@ -164,15 +165,15 @@
             <input class="form-control" type="text" name="telefono" id="telefono" placeholder="(11) 1111-1111">
           </div>
           <div class="form-group">
-            <label for="modelo">Modelo de automóvil FIAT:</label> 
+            <label for="modelo">Modelo de automóvil:</label> 
             <input class="form-control" type="text" name="modelo" id="modelo" placeholder="Fiat Palio Elx 2007">
           </div>
           <div class="form-group">
-            <label for="textito">Escriba aquí su solicitud</label>
-            <textarea class="form-control" rows="4" name="textito"></textarea>
+            <label for="solicitud">Escriba aquí su consulta:</label>
+            <textarea class="form-control" rows="4" name="solicitud" id="solicitud" placeholder="Contanos tu necesidad y haremos lo posible para resolverla."></textarea>
           </div>
           <div class="form-group">
-            <input type="checkbox"> ¿Desea recibir ofertas y novedades por mail?
+            <input type="checkbox" name="suscripcion"> ¿Desea recibir ofertas y novedades por mail?
           </div>
 
         <div class="text-right" id="boton-formulario">
